Correctly print commas